$Id: History,v 1.12 2001-11-05 17:57:58 maire Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                    TestEm5 History file
                    ------------------------
This file should be used by the G4 example coordinator to briefly
summarize all major modifications introduced in the code and keep
track of all tags.

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------
     
05-11-01  mma (testem5-V03-02-01)
- mods in TestEm3.cc: the initialisation and vis initialisation are
  not done by default. --> inserted /run/initialize in all macros.
- To get visualisation: > /control/execute vis.mac

        
19-10-01 Steve O'Neale (examples-V03-02-00)
- Update reference output

16-10-01 mma (testem5-V03-02-00)
- removal of G4RW header (EventAction.cc)
- new vis commands (init.mac)
- 80 columns everywhere
    
27-03-01 mma (testem5-V03-00-04)
- set cppflag G4NOHIST = true in gnumakefile
	  
21-02-01 mma (testem5-V03-00-03)
- hbook histograms restored
	  
20-02-01 mma (testem5-V03-00-02)
- verbose stepping adapted for STL
- save rndm at begin of event 
	     
09-01-01 mma
- modified Em5PhysicsList and Em5StepCut in order to make the
  command /step/setMaxStep working
	      
07-12-00 mma (testem5-V02-00-03 & testem-noHist)
- remove hbook histograms: GNUmakefile,runAction
				   
06-12-00 mma (testem5-V02-00-02 & testem-withHist)
- update of init.mac for new vis commands.
- G4UItcsh in the main()
	  
25th November 2000 Steve O'Neale (tagset210)
- update test outputs for min.delta energy cut and cut table
- Change in processes below ~ 1 per cent.

June 17, 2000  John Allison  (testem5-V01-00-00)