@@ -1,4 +1,4 @@
-$Id: History,v 1.12 2001-11-05 17:57:58 maire Exp $
+$Id: History,v 1.13 2001-11-28 16:08:18 maire Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -14,6 +14,12 @@ track of all tags.
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+     
+28-11-01  mma (testem5-V03-02-02) 
+- EventAction: DrawTrack "none"
+- small change in vis.mac
+- suppression of the rndm commands, now managed by G4RunManager: 
+  --> RunAction, RunActionMessenger, EventAction.
      
 05-11-01  mma (testem5-V03-02-01)
 - mods in TestEm3.cc: the initialisation and vis initialisation are
